# log-parser-toolkit

./: .gitignore  README.md  demo.tape  log_parser.py  pyproject.toml
.github/workflows/: test.yml
parsers/: __init__.py  base.py  linux.py  web.py  windows.py
samples/: sample_windows.csv
tests/: test_linux.py  test_web.py  test_windows.py
